[package]
name = "loglogd-api"
version = "0.1.0"
edition = "2021"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Distributed replicated binary log"
documentation = "https://github.com/rustshop/loglog"
homepage = "https://github.com/rustshop/loglog"
repository = "https://github.com/rustshop/loglog"
keywords = ["distributed", "cloud"]
license = "MPL-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "loglogd_api"
path = "src/lib.rs"

[dependencies]
binrw = "0.9.2"
derive_more = "0.99.17"
num_enum = "0.5.7"
