[package]
name = "loglogd"
version = "0.1.0"
edition = "2021"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Client library for LogLog"
documentation = "https://github.com/rustshop/loglog"
homepage = "https://github.com/rustshop/loglog"
repository = "https://github.com/rustshop/loglog"
keywords = ["distributed", "cloud"]
license = "MPL-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "loglog"
path = "src/lib.rs"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.35"
clap = { version = "3.1.6", features = [ "derive", "env" ] }
error-stack = "0.1.1"
tokio = { version = "1.19.2", features = ["macros", "rt", "rt-multi-thread", "signal", "io-util", "net", "sync"] }
thiserror = "1.0.31"
byteorder = "1.4.3"
num_enum = "0.5.7"
nix = "0.24.2"
tokio-uring = "0.3.0"
binrw = "0.9.2"
typed-builder = "0.10.0"
