[package]
name = "loglogd-e2e-tests"
version = "0.1.0"
edition = "2021"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Client library for LogLog"
documentation = "https://github.com/rustshop/loglog"
homepage = "https://github.com/rustshop/loglog"
repository = "https://github.com/rustshop/loglog"
keywords = ["distributed", "cloud"]
license = "MPL-2.0"
readme = "../README.md"

[lib]
name = "loglog_e2e"
path = "src/lib.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "sanity"
path = "src/bin/sanity.rs"

[[bin]]
name = "writer"
path = "src/bin/writer.rs"

[dependencies]
atty = "*"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.35"
clap = { version = "3.1.6", features = [ "derive", "env" ] }
error-stack = "0.1.1"
tokio = { version = "1.19.2", features = ["macros", "rt", "rt-multi-thread", "signal", "io-util", "net", "sync", "time"] }
thiserror = "1.0.31"
num_enum = "0.5.7"
nix = "0.24.2"
binrw = "0.9.2"
typed-builder = "0.10.0"
loglog-client = { path = "../client/" }
convi = { version = "0.0.5", features = [ "min_target_pointer_width_32" ] }
derive_more = "*"
rand = "*"

[dev-dependencies]
loglogd = { path = "../server" }
tempfile = "3.4.0"
anyhow = "*"