[package]
name = "loglogd-tokio-uring"
version = "0.1.0"
edition = "2021"
authors = ["Dawid Ciężarkiewicz <dpc@dpc.pw>"]
description = "Distributed replicated binary log"
documentation = "https://github.com/rustshop/loglog"
homepage = "https://github.com/rustshop/loglog"
repository = "https://github.com/rustshop/loglog"
keywords = ["distributed", "cloud"]
license = "MPL-2.0"
readme = "../README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[[bin]]
name = "loglogd-tokio-uring"
path = "src/main.rs"

[dependencies]
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing = "0.1.35"
clap = { version = "4.2.7", features = [ "derive", "env" ] }
error-stack = "0.1.1"
tokio = { version = "1.19.2", features = ["macros", "rt", "rt-multi-thread", "signal", "io-util", "net", "sync", "time"] }
thiserror = "1.0.31"
num_enum = "0.5.7"
nix = { version = "0.24.2", features = [ "zerocopy" ]}
tokio-uring = { version = "0.4.0" }
binrw = "0.11.1"
typed-builder = "0.10.0"
derive_more = "0.99.17"
loglogd-api = { path = "../api" }
convi = { version = "0.0.4", features = [ "min_target_pointer_width_32" ] }
atty = "*"
futures = "*"
scopeguard = "1.1.0"
